# Datos2.Tarea1

./: Presentación para revisión.odp
Client/: CMakeLists.txt  SocketClient.cpp  SocketClient.h  main.cpp  table.cpp  table.h  window.cpp  window.h
Client/src/: CMakeLists.txt  socketclient.cpp  socketclient.h  window.cpp  window.h
Client/tst/: CMakeLists.txt  SocketClientTest.cpp
Server/: .gitignore  CMakeLists.txt  floydwarshall.cpp  floydwarshall.h  graph.cpp  graph.h  main.cpp
Server/src/: CMakeLists.txt  SocketServer.cpp  SocketServer.h  floydwarshall.cpp  floydwarshall.h  main.cpp
Server/tst/: CMakeLists.txt  FloydWarshallTest.cpp  SocketServerTest.cpp
Tarea 1/: AdjNodesList.cpp  AdjNodesList.h  AdjacentNode.cpp  AdjacentNode.h  AdjacentNodesList.cpp  AdjacentNodesList.h  CMakeLists.txt  FloydWarshall.cpp  FloydWarshall.h  Graph.cpp  Graph.h  NodesList.cpp  NodesList.h  Vertex.cpp  Vertex.h  VertexList.cpp  VertexList.h  main.cpp
